syntax = "proto3";

package kernel.protocol.client.model.v1;

message MessagePayload {
  string action = 1;
  optional MessageHeader header = 2;
  reserved 3 to 15;
}

message MessageHeader {
  optional string correlation_id = 1;
  optional string source_peer_id = 6;
  reserved 2 to 5, 7 to 15;
}

message RequestPayload {
  string action = 1;
  RequestHeader header = 2;
  reserved 3 to 15;
}

message RequestHeader {
  string correlation_id = 1;
  string source_peer_id = 6;
  reserved 2 to 5, 7 to 15;
}

message ResponsePayload {
  string action = 1;
  ResponseHeader header = 2;
  reserved 3 to 15;
}

message ResponseHeader {
  string correlation_id = 1;
  int64  response_code = 11;
  bool response_status = 12;
  string  response_message = 13;
  reserved 2 to 10, 14, 15;
}
